--- a/styles/header.scss
+++ b/styles/header.scss
@@ -8,257 +8,247 @@ header {
     justify-content: flex-start;
     align-items: center;
 
-}
-
-.header-container h1 {
-    font-size: 3.5em;
-    margin: 45px;
-}
-
-.order-container {
-    display: flex;
-    align-items: flex-start;
-    gap: 15px;
-}
-
-.input-container {
-
-    margin: 0;
-    margin-left: 25px;
-    background-color: white;
-    width: 100%;
-    border-radius: 10px;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    height: 20%;
-    position: relative;
-
-}
-
-.input-container input {
-    border: none;
-    outline: none;
-    background-color: transparent;
-    font-size: 26px;
-    width: 100%;
-}
-
-.input-container::after {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 0;
-    background-color: rgb(0, 132, 255);
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-    transition: height 0.3s ease-in-out;
-}
-
-.input-container:has(input:focus)::after {
-    height: 4px;
-}
-
-.input-container i {
-    font-size: 1.3em;
-    margin: 25px;
-    margin-right: 15px;
-    box-shadow: inset 0px -1px 0px #F3F3F3;
-    ;
-}
-
-.order-list-container {
-
-    display: flex;
-    flex-direction: column;
-
-    width: 30%;
-
-}
-
-.order-list {
-    padding-left: 0;
-    background-color: white;
-    color: black;
-    width: 110%;
-    text-align: center;
-    height: 76px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 20px;
-    font-weight: 600;
-    cursor: pointer;
-
-
-}
-
-.order-list:first-child {
-    border-bottom: 1px solid #d4d4d4;
-}
-
-.order-list:nth-child(2):hover,
-.order-list:nth-child(3):hover {
-    background-color: #F3F3F3;
-}
-
-.order-list i {
-    margin-right: 8px;
-}
-
-.hidden {
-    visibility: hidden;
-}
-
-.order-button {
-    height: 76px;
-    padding: 8px;
-    margin-left: 15px;
-    width: 40%;
-    color: white;
-    background-color: black;
-    font-size: 26px;
-    border-radius: 18px;
-    cursor: pointer;
-
-    &:hover {
-        background-color: rgb(65, 63, 63);
-    }
-}
-
-.span-dropdown {
-    margin-left: 15px;
-}
-
-.paragraph-Login {
-    margin: 25px;
-    font-size: 23px;
-
-    margin-top: 0;
-}
-
-.paragraph-Login a {
-
-    color: black;
-}
-
-
-@media only screen and (max-width: 768px) {
-    header {
+    @media only screen and (max-width: 768px) {
         align-items: flex-start;
         padding-top: 15vh;
     }
 
-    .header-container {
-        width: 100%;
-        padding: 0 20px;
-    }
-
-    .header-container h1 {
-        font-size: 2.5em;
-        margin: 25px 15px;
-    }
-
-    .order-container {
-        flex-direction: column;
-        gap: 10px;
-        width: 100%;
-
-    }
-
-    .input-container {
-        margin-left: 15px;
-        width: 95%;
-        height: 60px;
-    }
-
-    .input-container input {
-        font-size: 18px;
-    }
-
-    .input-container i {
-        margin: 15px;
-        font-size: 1.2em;
-    }
-
-    .order-list-container {
-        width: 95%;
-        margin-left: 15px;
-    }
-
-    .order-list {
-        width: 100%;
-        height: 60px;
-        font-size: 16px;
-
-    }
-
-    .order-list:nth-child(2),
-    .order-list:nth-child(3) {
-        display: none !important;
-    }
-
-    .order-button {
-        width: 95%;
-        margin-left: 15px;
-        height: 60px;
-        font-size: 20px;
-    }
-
-    .paragraph-Login {
-        font-size: 18px;
-        margin: 15px;
-    }
-
-}
-
-@media only screen and (max-width: 480px) {
-    header {
+    @media only screen and (max-width: 480px) {
         padding-top: 12vh;
     }
 
-    .header-container h1 {
-        font-size: 2em;
-        margin: 20px 10px;
+    .header-container {
+
+
+        @media only screen and (max-width: 768px) {
+            width: 100%;
+            padding: 0 20px;
+        }
+
+        .hidden {
+            visibility: hidden;
+        }
+
+        h1 {
+            font-size: 3.5em;
+            margin: 45px;
+
+            @media only screen and (max-width: 768px) {
+                font-size: 2.5em;
+                margin: 25px 15px;
+            }
+
+            @media only screen and (max-width: 480px) {
+                font-size: 2em;
+                margin: 20px 10px;
+            }
+        }
+
+        .order-container {
+            display: flex;
+            align-items: flex-start;
+            gap: 15px;
+
+            @media only screen and (max-width: 768px) {
+                flex-direction: column;
+                gap: 10px;
+                width: 100%;
+            }
+
+            .input-container {
+                margin: 0;
+                margin-left: 25px;
+                background-color: white;
+                width: 100%;
+                border-radius: 10px;
+                display: flex;
+                justify-content: flex-start;
+                align-items: center;
+                height: 20%;
+                position: relative;
+
+                @media only screen and (max-width: 768px) {
+                    margin-left: 15px;
+                    width: 95%;
+                    height: 60px;
+                }
+
+                @media only screen and (max-width: 480px) {
+                    margin-left: 10px;
+                    width: 96%;
+                    height: 55px;
+                }
+
+                ::after {
+                    content: '';
+                    position: absolute;
+                    bottom: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 0;
+                    background-color: rgb(0, 132, 255);
+                    border-bottom-left-radius: 10px;
+                    border-bottom-right-radius: 10px;
+                    transition: height 0.3s ease-in-out;
+
+                }
+
+                :has(input:focus)::after {
+                    height: 4px;
+                }
+
+                i {
+                    font-size: 1.3em;
+                    margin: 25px;
+                    margin-right: 15px;
+                    box-shadow: inset 0px -1px 0px #F3F3F3;
+
+                    @media only screen and (max-width: 768px) {
+                        margin: 15px;
+                        font-size: 1.2em;
+                    }
+
+                    @media only screen and (max-width: 480px) {
+                        margin: 12px;
+                        font-size: 1.1em;
+                    }
+                }
+
+                input {
+                    border: none;
+                    outline: none;
+                    background-color: transparent;
+                    font-size: 26px;
+                    width: 100%;
+
+                    @media only screen and (max-width: 768px) {
+                        font-size: 18px;
+                    }
+
+                    @media only screen and (max-width: 480px) {
+                        font-size: 16px;
+                    }
+                }
+            }
+
+            .order-list-container {
+                display: flex;
+                flex-direction: column;
+                width: 30%;
+
+
+                @media only screen and (max-width: 768px) {
+                    width: 95%;
+                    margin-left: 15px;
+                }
+
+                @media only screen and (max-width: 480px) {
+                    width: 96%;
+                    margin-left: 10px;
+                }
+
+                .order-list {
+                    padding-left: 0;
+                    background-color: white;
+                    color: black;
+                    width: 110%;
+                    text-align: center;
+                    height: 76px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    font-size: 20px;
+                    font-weight: 600;
+                    cursor: pointer;
+
+                    @media only screen and (max-width: 768px) {
+                        width: 100%;
+                        height: 60px;
+                        font-size: 16px;
+                    }
+
+                    @media only screen and (max-width: 480px) {
+                        height: 55px;
+                        font-size: 15px;
+                    }
+
+                    .span-dropdown {
+                        margin-left: 15px;
+                    }
+
+                    :first-child {
+                        border-bottom: 1px solid #d4d4d4;
+                    }
+
+                    :nth-child(2),
+                    :nth-child(3) {
+                        @media only screen and (max-width: 768px) {
+                            display: none !important;
+                        }
+                    }
+
+                    :nth-child(2):hover,
+                    :nth-child(3):hover {
+                        background-color: #F3F3F3;
+                    }
+
+                    i {
+                        margin-right: 8px;
+                    }
+                }
+            }
+
+            .order-button {
+                height: 76px;
+                padding: 8px;
+                margin-left: 15px;
+                width: 40%;
+                color: white;
+                background-color: black;
+                font-size: 26px;
+                border-radius: 18px;
+                cursor: pointer;
+
+                @media only screen and (max-width: 768px) {
+                    width: 95%;
+                    margin-left: 15px;
+                    height: 60px;
+                    font-size: 20px;
+                }
+
+                @media only screen and (max-width: 480px) {
+                    width: 96%;
+                    margin-left: 10px;
+                    height: 55px;
+                    font-size: 18px;
+                    border-radius: 15px;
+                }
+
+                &:hover {
+                    background-color: rgb(65, 63, 63);
+                }
+            }
+
+        }
+
+        .paragraph-Login {
+            margin: 25px;
+            font-size: 23px;
+            margin-top: 0;
+
+            @media only screen and (max-width: 768px) {
+                font-size: 18px;
+                margin: 15px;
+            }
+            @media only screen and (max-width: 480px) {
+    font-size: 16px;
+    margin: 10px;
+}
+
+            a {
+                color: black;
+            }
+        }
     }
 
-    .input-container {
-        margin-left: 10px;
-        width: 96%;
-        height: 55px;
-    }
-
-    .input-container input {
-        font-size: 16px;
-    }
-
-    .input-container i {
-        margin: 12px;
-        font-size: 1.1em;
-    }
-
-    .order-list-container {
-        width: 96%;
-        margin-left: 10px;
-    }
-
-    .order-list {
-        height: 55px;
-        font-size: 15px;
-    }
-
-    .order-button {
-        width: 96%;
-        margin-left: 10px;
-        height: 55px;
-        font-size: 18px;
-        border-radius: 15px;
-    }
-
-    .paragraph-Login {
-        font-size: 16px;
-        margin: 10px;
-    }
 }
