--- a/styles/menu.scss
+++ b/styles/menu.scss
@@ -4,69 +4,67 @@
     width: 100%;
     padding: 150px 0;
 
-}
-
-.menu-block {
-    width: 30%;
-    margin: 0 20px;
-    cursor: pointer;
-}
-
-.menu-block img {
-    width: 100%;
-}
-
-.menu-block h2 {
-    font-weight: 700;
-    font-size: 35px;
-    margin-bottom: 20px;
-}
-
-.menu-block p {
-    font-size: 25px;
-}
-
-.menu-block a {
-    color: black;
-}
-
-@media only screen and (max-width: 768px) {
-    .menu-container {
+    @media only screen and (max-width: 768px) {
         padding: 80px 20px;
         gap: 30px;
         flex-direction: column;
     }
 
-    .menu-block {
-        width: 100%;
-        margin: 0;
-    }
-
-    .menu-block h2 {
-        font-size: 24px;
-        margin-bottom: 12px;
-    }
-
-    .menu-block p {
-        font-size: 18px;
-    }
-}
-
-@media only screen and (max-width: 450px) {
-    .menu-container {
+    @media only screen and (max-width: 450px) {
         padding: 50px 15px;
         gap: 35px;
     }
 
     .menu-block {
-        width: 100%;
+        width: 30%;
+        margin: 0 20px;
+        cursor: pointer;
+
+        @media only screen and (max-width: 768px) {
+            width: 100%;
+            margin: 0;
+        }
+
+        @media only screen and (max-width: 450px) {
+            width: 100%;
+        }
+
+        img {
+            width: 100%;
+        }
+
+        h2 {
+            font-weight: 700;
+            font-size: 35px;
+            margin-bottom: 20px;
+
+            @media only screen and (max-width: 768px) {
+                font-size: 24px;
+                margin-bottom: 12px;
+            }
+
+            @media only screen and (max-width: 450px) {
+                font-size: 24px;
+            }
+        }
+
+        p {
+            font-size: 25px;
+
+            @media only screen and (max-width: 768px) {
+                font-size: 18px;
+            }
+
+            @media only screen and (max-width: 450px) {
+                font-size: 18px;
+            }
+        }
+
+        a {
+            color: black;
+        }
+
+
     }
 
-    .menu-block h2 {
-        font-size: 24px;
-    }
-
-    .menu-block p {
-        font-size: 18px;
-    }
 }
