--- a/styles/nav.scss
+++ b/styles/nav.scss
@@ -9,81 +9,175 @@ nav {
     transition: background-color 0.2s ease-in-out;
     z-index: 5;
     background-color: transparent;
-}
 
-.btn-menu {
-    background-color: transparent;
-    border-radius: 50%;
-    border: none;
-    margin-right: 25px;
-    cursor: pointer;
-    font-size: 25px;
-    margin-left: 25px;
-
-    &:hover {
-        box-shadow: -1px 5px 47px 0px rgba(0, 0, 0, 0.75);
+    @media only screen and (max-width: 1024px) {
+        height: 9vh;
+        padding: 0 10px;
+        position: absolute;
+        background-color: transparent !important;
     }
-}
 
-.span-menu {
-    margin-left: 25px;
-}
-
-.span-register {
-    margin-right: 25px;
-
-}
-
-.span-menu,
-.span-register {
-    display: flex;
-    align-items: center;
-    height: 100%;
-}
-
-.span-menu a,
-.span-register a {
-    color: black;
-    text-decoration: none;
-    font-weight: 600;
-    font-size: 26px;
-}
-
-.btn-Login,
-.btn-register,
-.btn-location {
-    height: auto;
-    padding: 10px 20px;
-    margin-left: 10px;
-    cursor: pointer;
-    border-radius: 25px;
-    border: none;
-    font-size: 20px;
-    margin: 0 25px;
-}
-
-.btn-Login {
-    color: black;
-    background-color: white;
-
-    &:hover {
-        background-color: rgb(235, 227, 227);
+    @media only screen and (max-width: 768px) {
+        height: 9vh;
+        padding: 0 10px;
+        position: absolute;
+        background-color: transparent !important;
     }
-}
 
-.btn-register,
-.btn-location {
-    color: white;
-    background-color: black;
-
-    &:hover {
-        background-color: rgb(65, 63, 63);
+    @media only screen and (max-width: 480px) {
+        height: 10vh;
     }
-}
 
-.btn-location {
-    display: none;
-    transition: display 0.3s ease-in-out 1s;
+    .span-menu {
+        margin-left: 25px;
+
+        @media only screen and (max-width: 768px) {
+            margin-left: 10px;
+        }
+
+        .btn-menu {
+            background-color: transparent;
+            border-radius: 50%;
+            border: none;
+            margin-right: 25px;
+            cursor: pointer;
+            font-size: 25px;
+            margin-left: 25px;
+
+            @media only screen and (max-width: 768px) {
+                margin-left: 10px;
+                margin-right: 15px;
+            }
+
+            @media only screen and (max-width: 480px) {
+                font-size: 20px;
+                margin-left: 5px;
+                margin-right: 10px;
+            }
+
+            &:hover {
+                box-shadow: -1px 5px 47px 0px rgba(0, 0, 0, 0.75);
+            }
+        }
+
+        .btn-location {
+            display: none;
+            transition: display 0.3s ease-in-out 1s;
+
+            @media only screen and (max-width: 480px) {
+                font-size: 14px;
+                padding: 6px 10px;
+            }
+        }
+
+        @media only screen and (max-width: 768px) {
+            display: none !important;
+        }
+
+        a {
+            @media only screen and (max-width: 768px) {
+                font-size: 20px;
+            }
+
+            @media only screen and (max-width: 480px) {
+                font-size: 18px;
+            }
+
+        }
+
+    }
+
+    .span-register {
+        margin-right: 25px;
+
+        @media only screen and (max-width: 768px) {
+            margin-right: 10px;
+        }
+
+        @media only screen and (max-width: 480px) {
+            flex-direction: column-reverse;
+        }
+
+        a {
+            font-size: 1em;
+            margin-right: 5px;
+
+            @media only screen and (max-width: 768px) {
+                font-size: 1.2em;
+            }
+
+            @media only screen and (max-width: 480px) {
+                font-size: 1.2em;
+            }
+        }
+
+        .register-buttons {
+            @media only screen and (max-width: 1024px) {
+                display: flex;
+            }
+
+            .btn-Login {
+                color: black;
+                background-color: white;
+
+                @media only screen and (max-width: 480px) {
+                    font-size: 14px;
+                    padding: 6px 12px;
+                    margin: 0 5px;
+                }
+
+                &:hover {
+                    background-color: rgb(235, 227, 227);
+                }
+            }
+        }
+    }
+
+    .span-menu,
+    .span-register {
+        display: flex;
+        align-items: center;
+        height: 100%;
+
+        a {
+            color: black;
+            text-decoration: none;
+            font-weight: 600;
+            font-size: 26px;
+        }
+
+
+    }
+
+    .btn-Login,
+    .btn-register,
+    .btn-location {
+        height: auto;
+        padding: 10px 20px;
+        margin-left: 10px;
+        cursor: pointer;
+        border-radius: 25px;
+        border: none;
+        font-size: 20px;
+        margin: 0 25px;
+
+        @media only screen and (max-width: 768px) {
+            font-size: 16px;
+            padding: 8px 14px;
+            margin: 0 8px;
+        }
+    }
+
+    .btn-register,
+    .btn-location {
+        color: white;
+        background-color: black;
+
+        &:hover {
+            background-color: rgb(65, 63, 63);
+        }
+    }
+
 }
 
 .location-input {
@@ -93,127 +187,29 @@ nav {
     display: none;
     background-color: white;
     z-index: 3;
-}
 
-.input-container-navbar {
-    display: flex;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
-}
-
-.input-container-navbar-content {
-    background-color: rgb(241, 236, 231);
-    width: 100%;
-    margin: 0 35px;
-    padding: 10px 25px;
-    font-size: 1.3em;
-    font-weight: 600;
-    border-radius: 10px;
-}
-
-.input-container-navbar-content input {
-    border: none;
-    outline: none;
-    background-color: transparent;
-}
-
-@media only screen and (max-width: 1024px) {
-    .register-buttons {
-
+    .input-container-navbar {
         display: flex;
+        height: 100%;
+        justify-content: center;
+        align-items: center;
 
-    }
+        &-content {
+            background-color: rgb(241, 236, 231);
+            width: 100%;
+            margin: 0 35px;
+            padding: 10px 25px;
+            font-size: 1.3em;
+            font-weight: 600;
+            border-radius: 10px;
 
-    .span-register a {
-        font-size: 1em;
-        margin-right: 5px;
-    }
+            input {
+                border: none;
+                outline: none;
+                background-color: transparent;
+            }
 
-    nav {
-        height: 9vh;
-        padding: 0 10px;
-        position: absolute;
-        background-color: transparent !important;
-    }
+        }
 
-}
-
-@media only screen and (max-width: 768px) {
-    nav {
-        height: 9vh;
-        padding: 0 10px;
-        position: absolute;
-        background-color: transparent !important;
-    }
-
-    .span-menu {
-        margin-left: 10px;
-    }
-
-
-    .span-register {
-        margin-right: 10px;
-
-    }
-
-    .span-menu a {
-        font-size: 20px;
-    }
-
-    .span-register a {
-        font-size: 1.2em;
-    }
-
-    .btn-Login,
-    .btn-register,
-    .btn-location {
-        font-size: 16px;
-        padding: 8px 14px;
-        margin: 0 8px;
-    }
-
-    .btn-location {
-        display: none !important;
-    }
-
-    .btn-menu {
-        margin-left: 10px;
-        margin-right: 15px;
-    }
-}
-
-@media only screen and (max-width: 480px) {
-    nav {
-        height: 10vh;
-    }
-
-    .span-menu a {
-        font-size: 18px;
-    }
-
-    .span-register a {
-        font-size: 1.2em;
-    }
-
-    .btn-Login {
-        font-size: 14px;
-        padding: 6px 12px;
-        margin: 0 5px;
-    }
-
-    .btn-menu {
-        font-size: 20px;
-        margin-left: 5px;
-        margin-right: 10px;
-    }
-
-    .span-register {
-        flex-direction: column-reverse;
-    }
-
-    .btn-location {
-        font-size: 14px;
-        padding: 6px 10px;
     }
 }
