--- a/styles/overlay.scss
+++ b/styles/overlay.scss
@@ -5,6 +5,156 @@
     display: none;
     z-index: -1;
     transition: background-color 0.5s ease-in-out;
+
+    .overlay-content {
+        position: fixed;
+        top: 15%;
+        left: 40%;
+        background-color: #F3F3F3;
+        padding: 24px;
+        width: 25%;
+        height: auto;
+        border-radius: 25px;
+
+        button {
+            @media only screen and (max-width: 480px) {
+                font-size: 16px;
+                padding: 12px;
+            }
+        }
+        select{
+            
+        }
+
+        @media only screen and (max-width: 1024px) {
+            width: 35%;
+        }
+
+        @media only screen and (max-width: 768px) {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100vh;
+            padding: 24px;
+            border-radius: 0;
+        }
+
+        @media only screen and (max-width: 480px) {
+            width: 100%;
+            height: 100vh;
+            padding: 18px;
+            border-radius: 20px;
+        }
+
+        h2 {
+            font-size: 1.5em;
+        }
+
+        .overlay-location-header {
+            display: flex;
+            justify-content: space-between;
+        }
+
+        .overlay-order-content {
+            margin: 10px;
+            display: flex;
+            flex-direction: column;
+
+            button {
+                border-radius: 10px;
+                padding: 15px;
+                font-weight: 600;
+                font-size: 1.5em;
+                cursor: pointer;
+            }
+
+            .overlay-order-select {
+                padding: 25px;
+                outline: none;
+                border: none;
+                background-color: rgb(241, 237, 232);
+                border-radius: 15px;
+                cursor: pointer;
+                font-size: 1.5em;
+                font-weight: 500;
+            }
+
+            .overlay-order-plan {
+                background-color: black;
+                color: white;
+
+                &:hover {
+                    background-color: rgb(65, 63, 63);
+                }
+            }
+
+            .overlay-order-now {
+                background-color: white;
+                color: black;
+
+                &:hover {
+                    background-color: rgb(238, 233, 233);
+                }
+            }
+
+            .input-adres-container {
+                display: flex;
+                padding: 10px;
+                border-radius: 25px;
+                margin-bottom: 55px;
+                margin-top: 20px;
+                width: 100%;
+                height: 100%;
+                background-color: rgb(236, 236, 236);
+
+                @media only screen and (max-width: 768px) {
+                    height: auto;
+                }
+
+                :has(input:focus) {
+                    border: 2px solid black;
+                }
+
+                input {
+                    outline: none;
+                    border: none;
+                    background-color: transparent;
+                    width: 100%;
+                    font-size: 1.5em;
+                }
+
+                i {
+                    font-size: 1.3em;
+                    margin-right: 5px;
+                }
+
+            }
+
+        }
+    }
+
+    .overlay-location-header .overlay-order {
+        display: none;
+
+        h2 {
+            font-size: 2.5em
+        }
+
+        .overlay-location-cancel,
+        .overlay-order-cancel {
+            border: none;
+            padding: 5px;
+            border-radius: 50%;
+            font-size: 1.5em;
+            cursor: pointer;
+
+            &:hover {
+                box-shadow: -1px 3px 47px 0px rgba(0, 0, 0, 0.75);
+            }
+        }
+    }
+
 }
 
 .active {
@@ -13,168 +163,9 @@
     z-index: 100;
 }
 
-
-.overlay-content {
-    position: fixed;
-    top: 15%;
-    left: 40%;
-    background-color: #F3F3F3;
-    padding: 24px;
-    width: 25%;
-    height: auto;
-    border-radius: 25px;
-}
-
-
-.overlay-location-header {
-    display: flex;
-    justify-content: space-between;
-}
-
-.overlay-location-header h2,
-.overlay-order h2 {
-    font-size: 2.5em
-}
-
-
-.overlay-location,
-.overlay-order {
-
-    display: none;
-}
-
-.overlay-order-content {
-    margin: 10px;
-    display: flex;
-    flex-direction: column;
-}
-
-.overlay-order-select {
-    padding: 25px;
-    outline: none;
-    border: none;
-    background-color: rgb(241, 237, 232);
-    border-radius: 15px;
-    cursor: pointer;
-    font-size: 1.5em;
-    font-weight: 500;
-}
-
-
-
-.overlay-order-content button {
-    border-radius: 10px;
-    padding: 15px;
-    font-weight: 600;
-    font-size: 1.5em;
-    cursor: pointer;
-
-}
-
-.overlay-order-plan {
-    background-color: black;
-    color: white;
-
-    &:hover {
-        background-color: rgb(65, 63, 63);
-    }
-}
-
-.overlay-order-now {
-    background-color: white;
-    color: black;
-
-    &:hover {
-        background-color: rgb(238, 233, 233);
-    }
-}
-
-.overlay-location-cancel,
-.overlay-order-cancel {
-    border: none;
-    padding: 5px;
-    border-radius: 50%;
-    font-size: 1.5em;
-    cursor: pointer;
-}
-
-.overlay-location-cancel:hover,
-.overlay-order-cancel:hover {
-    box-shadow: -1px 3px 47px 0px rgba(0, 0, 0, 0.75);
-}
-
-
-.input-adres-container {
-    display: flex;
-    padding: 10px;
-    border-radius: 25px;
-    margin-bottom: 55px;
-    margin-top: 20px;
-    width: 100%;
-    height: 100%;
-    background-color: rgb(236, 236, 236);
-}
-
-.input-adres-container:has(input:focus) {
-    border: 2px solid black;
-}
-
-.input-adres-container input {
-    outline: none;
-    border: none;
-    background-color: transparent;
-    width: 100%;
-    font-size: 1.5em;
-}
-
-.input-adres-container i {
-    font-size: 1.3em;
-    margin-right: 5px;
-}
-
-@media only screen and (max-width: 1024px) {
-    .overlay-content {
-        width: 35%;
-    }
-}
-
-@media only screen and (max-width: 768px) {
-    .overlay-content {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100vh;
-        padding: 24px;
-        border-radius: 0;
-    }
-
-    .input-adres-container {
-        height: auto;
-    }
-
-}
-
 @media only screen and (max-width: 480px) {
-    .overlay-content {
-
-        width: 100%;
-        height: 100vh;
-        padding: 18px;
-        border-radius: 20px;
-    }
-
-    .overlay-content h2 {
-        font-size: 1.5em;
-    }
-
-    .overlay-content button {
-        font-size: 16px;
-        padding: 12px;
-    }
-
-    .overlay-content select {
-        font-size: 16px;
-        padding: 10px;
-    }
+.overlay-content select {
+    font-size: 16px;
+    padding: 10px;
+}
 }
