--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,7 @@ nav {
   transition: background-color 0.2s ease-in-out;
   z-index: 5;
   background-color: transparent;
+  font-size: 18px;
 }
 
 .btn-menu {
@@ -37,6 +38,7 @@ nav {
   display: flex;
   align-items: center;
   height: 100%;
+  font-size: 16px;
 }
 
 .span-menu a,
@@ -44,7 +46,7 @@ nav {
   color: black;
   text-decoration: none;
   font-weight: 600;
-  font-size: 26px;
+  font-size: 18px;
 }
 
 .btn-Login,
@@ -56,7 +58,8 @@ nav {
   cursor: pointer;
   border-radius: 25px;
   border: none;
-  font-size: 20px;
+  font-weight: 500;
+  font-size: 14px;
   margin: 0 25px;
 }
 
@@ -210,8 +213,8 @@ footer {
 }
 
 .informations img {
-  height: 150px;
-  width: 250px;
+  height: 120px;
+  width: 210px;
 }
 
 .download-apps {
@@ -251,7 +254,7 @@ footer {
 
 .info-list li {
   list-style-type: none;
-  font-size: 1.4em;
+  font-size: 1.2em;
   margin-bottom: 24px;
 }
 .info-list li:hover {
@@ -265,7 +268,7 @@ footer {
 }
 
 .privacy i {
-  font-size: 30px;
+  font-size: 20px;
   margin-left: 20px;
   margin-right: 15px;
 }
@@ -273,7 +276,7 @@ footer {
 .privacy-links a {
   margin-right: 15px;
   cursor: pointer;
-  font-size: 17px;
+  font-size: 16px;
 }
 .privacy-links a:hover {
   text-decoration: underline;
@@ -293,7 +296,7 @@ footer {
 
 .privacy-info {
   margin-top: 35px;
-  font-size: 25px;
+  font-size: 18px;
   display: flex;
 }
 
@@ -431,15 +434,15 @@ footer {
 
 .towns-header h2,
 .countries-header h2 {
-  font-weight: 700;
-  font-size: 52px;
+  font-weight: 600;
+  font-size: 42px;
   margin-bottom: 20px;
 }
 
 .towns-header a,
 .countries-header a {
   color: black;
-  font-size: 28px;
+  font-size: 24px;
 }
 
 .map-container {
@@ -452,7 +455,7 @@ footer {
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(6, 1fr);
   gap: 30px;
-  font-size: 23px;
+  font-size: 18px;
   margin-top: 25px;
   grid-auto-flow: column;
 }
@@ -467,7 +470,7 @@ footer {
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(8, 1fr);
   gap: 30px;
-  font-size: 23px;
+  font-size: 18px;
   margin-top: 25px;
   grid-auto-flow: column;
 }
@@ -551,29 +554,37 @@ header {
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  font-size: 18px;
+}
+.header-container {
+  font-size: 18px;
 }
 
 .header-container h1 {
-  font-size: 3.5em;
+  font-size: 2.5em;
   margin: 45px;
+}
+.header-container p {
+  font-size: 1.2em;
 }
 
 .order-container {
   display: flex;
   align-items: flex-start;
   gap: 15px;
+  width: 135%;
 }
 
 .input-container {
   margin: 0;
   margin-left: 25px;
   background-color: white;
-  width: 100%;
+  width: 130%;
   border-radius: 10px;
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  height: 20%;
+  height: 10%;
   position: relative;
 }
 
@@ -581,7 +592,7 @@ header {
   border: none;
   outline: none;
   background-color: transparent;
-  font-size: 26px;
+  font-size: 18px;
   width: 100%;
 }
 
@@ -619,13 +630,13 @@ header {
   padding-left: 0;
   background-color: white;
   color: black;
-  width: 110%;
+  width: 140%;
   text-align: center;
   height: 76px;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 20px;
+  font-size: 15px;
   font-weight: 600;
   cursor: pointer;
 }
@@ -650,11 +661,11 @@ header {
 .order-button {
   height: 76px;
   padding: 8px;
-  margin-left: 15px;
+  margin-left: 55px;
   width: 40%;
   color: white;
   background-color: black;
-  font-size: 26px;
+  font-size: 18px;
   border-radius: 18px;
   cursor: pointer;
 }
@@ -670,6 +681,8 @@ header {
   margin: 25px;
   font-size: 23px;
   margin-top: 0;
+  position: absolute;
+  top: 56%;
 }
 
 .paragraph-Login a {
@@ -789,12 +802,12 @@ header {
 
 .menu-block h2 {
   font-weight: 700;
-  font-size: 35px;
+  font-size: 30px;
   margin-bottom: 20px;
 }
 
 .menu-block p {
-  font-size: 25px;
+  font-size: 20px;
 }
 
 .menu-block a {
@@ -867,7 +880,7 @@ header {
 
 .overlay-location-header h2,
 .overlay-order h2 {
-  font-size: 2.5em;
+  font-size: 2.1em;
 }
 
 .overlay-location,
@@ -888,7 +901,7 @@ header {
   background-color: rgb(241, 237, 232);
   border-radius: 15px;
   cursor: pointer;
-  font-size: 1.5em;
+  font-size: 1.3em;
   font-weight: 500;
 }
 
@@ -896,7 +909,7 @@ header {
   border-radius: 10px;
   padding: 15px;
   font-weight: 600;
-  font-size: 1.5em;
+  font-size: 1.3em;
   cursor: pointer;
 }
 
@@ -921,7 +934,7 @@ header {
   border: none;
   padding: 5px;
   border-radius: 50%;
-  font-size: 1.5em;
+  font-size: 1.3em;
   cursor: pointer;
 }
 
@@ -1037,13 +1050,13 @@ header {
 }
 
 .lower-content img {
-  width: 100px;
-  height: 100px;
+  width: 80px;
+  height: 80px;
   float: left;
 }
 
 .lower-content p {
-  font-size: 1.2em;
+  font-size: 1em;
   font-weight: 500;
 }
 
@@ -1058,7 +1071,7 @@ header {
 
 .upper-content p,
 button {
-  font-size: 1.5em;
+  font-size: 1em;
   cursor: pointer;
 }
 
@@ -1071,7 +1084,7 @@ button {
   border-radius: 10px;
   padding: 20px;
   font-weight: 500;
-  font-size: 1.5em;
+  font-size: 1.1em;
   cursor: pointer;
   margin: 5px;
 }
