--- a/styles/style.css
+++ b/styles/style.css
@@ -318,7 +318,7 @@ footer {
   footer {
     height: auto;
     min-height: 55vh;
-    background-color: #f6f6f6;
+    background-color: white;
   }
   .informations,
   .privacy {
@@ -711,7 +711,7 @@ header {
     padding: 0 20px;
   }
   .header-container h1 {
-    font-size: 2.5em;
+    font-size: 2.1em;
     margin: 25px 15px;
   }
   .order-container {
