--- a/styles/style.css
+++ b/styles/style.css
@@ -30,7 +30,7 @@ nav {
 }
 
 .span-register {
-  margin-right: 20px;
+  margin-right: 10px;
 }
 
 .span-menu,
@@ -109,7 +109,6 @@ nav {
   padding: 10px 25px;
   font-size: 1.4em;
   font-weight: 600;
-  border-radius: 10px;
 }
 
 .input-container-navbar-content input {
@@ -172,11 +171,16 @@ nav {
   nav {
     height: 10vh;
   }
+  .register-buttons {
+   
+   padding-right: 0px;
+  }
   .span-menu a {
     font-size: 18px;
   }
   .span-register a {
-    font-size: 1.2em;
+    font-size: 1em;
+    margin-top: 10px;
   }
   .btn-Login {
     font-size: 14px;
@@ -194,6 +198,12 @@ nav {
   .btn-location {
     font-size: 14px;
     padding: 6px 10px;
+  }
+  .input-container-navbar-content{
+    margin: 0 20px;
+  }
+  .input-container-navbar-content i{
+    margin-right: 10px;
   }
 }
 footer {
@@ -364,7 +374,7 @@ footer {
   }
   .privacy {
     height: auto;
-    padding-bottom: 30px;
+    padding-bottom: 100px;
     margin-top: 40px;
   }
   .privacy i {
@@ -387,12 +397,12 @@ footer {
     gap: 15px;
   }
   .privacy-links a {
-    font-size: 14px;
+    font-size: 18px;
     margin-right: 0;
     color: #545454;
   }
   .privacy-info {
-    font-size: 12px;
+    font-size: 18px;
     margin-top: 25px;
     flex-direction: column;
     gap: 10px;
@@ -418,13 +428,13 @@ footer {
     margin-bottom: 18px;
   }
   .privacy i {
-    font-size: 22px;
+    font-size: 18px;
   }
   .privacy-links a {
-    font-size: 13px;
+    font-size: 15px;
   }
   .privacy-info {
-    font-size: 11px;
+    font-size: 15px;
   }
 }
 .towns-section,
@@ -534,6 +544,7 @@ footer {
     margin: 0 4%;
     margin-bottom: 40px;
   }
+  
   .towns-header h2,
   .countries-header h2 {
     font-size: 24px;
@@ -546,11 +557,11 @@ footer {
     height: 250px;
   }
   .towns-list {
-    gap: 18px 30px;
+    gap: 30px 30px;
     font-size: 15px;
   }
   .countries-list {
-    gap: 18px 30px;
+    gap: 45px 30px;
     font-size: 15px;
   }
 }
@@ -764,36 +775,41 @@ header {
     margin: 20px 10px;
   }
   .input-container {
-    margin-left: 10px;
+    margin-left: 5px;
     width: 96%;
     height: 55px;
+    border-radius: 0;
   }
   .input-container input {
     font-size: 16px;
   }
   .input-container i {
     margin: 12px;
+    margin-right: 15px;
     font-size: 1.1em;
   }
   .order-list-container {
     width: 96%;
-    margin-left: 10px;
+    margin-left: 5px;
   }
   .order-list {
     height: 55px;
     font-size: 15px;
+    justify-content: flex-start;
+    padding-left: 12px;
   }
   .order-button {
     width: 96%;
-    margin-left: 10px;
+    margin-left: 5px;
     height: 55px;
     font-size: 18px;
-    border-radius: 15px;
+    border-radius: 5px;
   }
-  .paragraph-Login {
-    font-size: 16px;
-    margin: 10px;
-  }
+  .header-container p {
+  font-size: 15px;
+  margin-top: 30px;
+  font-weight: 500;
+}
 }
 .menu-container {
   display: flex;
@@ -856,7 +872,8 @@ header {
     font-size: 24px;
   }
   .menu-block p {
-    font-size: 18px;
+    font-size: 16px;
+    font-weight: 600;
   }
 }
 .overlay {
@@ -878,7 +895,7 @@ header {
   position: fixed;
   top: 15%;
   left: 40%;
-  background-color: #F3F3F3;
+  background-color: white;
   padding: 24px;
   width: 25%;
   height: auto;
@@ -1011,7 +1028,7 @@ header {
     border-radius: 20px;
   }
   .overlay-content h2 {
-    font-size: 1.5em;
+    font-size: 1.9em;
   }
   .overlay-content button {
     font-size: 16px;
@@ -1021,6 +1038,14 @@ header {
     font-size: 16px;
     padding: 10px;
   }
+  .overlay-location-header{
+    flex-direction: column-reverse;
+    align-items: flex-start;
+  }
+  .overlay-location-header h2{
+    font-size: 1.8em;
+  }
+  
 }
 .sidebar {
   position: fixed;
@@ -1111,7 +1136,7 @@ button {
 }
 
 .sidebar-SignIn {
-  background-color: white;
+  background-color: #F3F3F3;
   color: black;
 }
 .sidebar-SignIn:hover {
@@ -1136,16 +1161,23 @@ button {
     cursor: pointer;
   }
 }
-@media only screen and (max-width: 450px) {
+@media only screen and (max-width: 480px) {
   .upper-content p,
   button {
-    font-size: 1em;
+    font-size: 0.9em;
     margin: 5px;
+    margin-top: 15px;
+    font-weight: 550;
   }
   .lower-content img {
     width: 50px;
     height: 50px;
     float: left;
+    margin-right: 7px;
+  }
+  .lower-content p {
+    font-size: 1em;
+    font-weight: 550;
   }
 }
 .app-section {
@@ -1179,6 +1211,17 @@ button {
     border-radius: 5px;
     cursor: pointer;
     margin-top: 20px;
+  }
+}
+@media only screen and (max-width: 480px) {
+
+  .app-section-content p {
+    font-weight: 700;
+    font-size: 1.4em;
+    margin-left: 15px;
+  }
+  .app-section img {
+    border-radius: 20px;
   }
 }
 * {
